# SiGMoiD

./: LICENSE  README.md  pyproject.toml
src/sigmoid/: __init__.py  model.py  selector.py
