[project]
name = "sigmoid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "GecklesTheClown", email = "nicholas.gecks@proton.me" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
